--- a/Portfolio.html
+++ b/Portfolio.html
@@ -166,7 +166,7 @@
             <!-- Individual certificate cards go here -->
             <div class="certificate-card">
                 <img src="Coursera H6JPB7BMGWLJ_page-0001.jpg" alt="Certificate 1">
-                <h3>Python Data Structures</h3>
+                <h3>programming For every EveryBody Python Data Structures</h3>
             </div>
             <div class="certificate-card">
                 <img src="Coursera RDMEZZGS3TZA_page-0001.jpg" alt="Certificate 2">
